# TMDSvr

./: .gitignore  CMakeLists.txt  README.md  tmdsvr_cfg.cmake  version_config.hpp.cmake
config/: standard.ini
headers/: version.hpp
src/: main.cpp  version.cpp
